<resources>
    <string name="app_name">MyGithubSearch</string>
    <string name="username">Username</string>
    <string name="from_github">From Github</string>
    <string name="location">location</string>
    <string name="bio">bio</string>
    <string name="repository">repository</string>
    <string name="company">company</string>
    <string name="follower">followers</string>
    <string name="detail_github">detail_github</string>
    <string name="nama_user">nama user</string>
    <string name="search_user">search user</string>
    <string name="change_language">Change language</string>
    <string name="following">followings</string>
    <string name="detail">Detail User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followr_fragment">Followr Fragment</string>
    <string name="follwor_fragment">Follwor Fragment</string>
    <string name="_166">166</string>
    <string name="todo">TODO</string>
    <string name="splash_image">Splash Image</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="tanggal_alarm">Tanggal Alarm</string>
    <string name="waktu_alarm">waktu alarm</string>
    <string name="pesan_alarm">Pesan alarm</string>
    <string name="set_alarm">set Alarm</string>
    <string name="repeat_alarm">repeating alarm</string>
    <string name="cancel_alarm">cancel alarm</string>
    <string name="add_favorite">add favorite</string>
    <string name="daily_remainder_alarm">Daily Remainder Alarm</string>
</resources>