<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/one_time_alarm"
        android:textSize="16sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_once_date"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_date_range_24"
            android:contentDescription="@string/tanggal_alarm" />
        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_alarm" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_once_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_time_24"
            android:contentDescription="@string/one_time_alarm" />
        <TextView
            android:id="@+id/tv_once_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu_alarm" />


    </LinearLayout>
    <EditText
        android:id="@+id/edt_once_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/pesan_alarm"
        android:inputType="text"
        android:autofillHints="@string/pesan_alarm" />
    <Button
        android:id="@+id/btn_set_once_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/set_alarm" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/repeat_alarm"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_repeating_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_time_24"
            android:contentDescription="@string/waktu_alarm" />
        <TextView
            android:id="@+id/tv_repeating_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu_alarm" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/pesan_alarm"
        android:inputType="text"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_set_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            android:text="@string/set_alarm" />
        <Button
            android:id="@+id/btn_cancel_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel_alarm" />
    </LinearLayout>


</LinearLayout>